--- a/pgvector-16.yaml
+++ b/pgvector-16.yaml
@@ -41,8 +41,8 @@ test:
   environment:
     contents:
       packages:
-        - postgresql
-        - postgresql-client
+        - postgresql-16
+        - postgresql-16-client
         - shadow
         - sudo-rs
         - glibc-locales
