change runtime deps and update compat package
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/gcp-compute-persistent-disk-csi-driver-1.15.yaml
+++ b/gcp-compute-persistent-disk-csi-driver-1.15.yaml
@@ -9,6 +9,7 @@ package:
     runtime:
       - bash
       - blkid
+      - blockdev
       - btrfs-progs
       - busybox
       - ca-certificates
@@ -17,8 +18,6 @@ package:
       - e2fsprogs
       - e2fsprogs-extra
       - e2fsprogs-libs
-      - eudev
-      - eudev-libs
       - glibc
       - json-c
       - kmod-libs
@@ -43,6 +42,7 @@ package:
       - ncurses
       - nvme-cli
       - readline
+      - systemd
       - umount
       - userspace-rcu
       - util-linux
@@ -65,12 +65,17 @@ pipeline:
         -X main.version=$(git describe --long --tags --match='v*' --dirty 2>/dev/null || git rev-list -n1 HEAD)
       output: gce-pd-csi-driver
 
+  - runs: ""
+
 subpackages:
   - name: "${{package.name}}-compat"
     pipeline:
       - runs: |
-          mkdir -p "${{targets.subpkgdir}}"
+          mkdir -p ${{targets.subpkgdir}}/lib/udev_containerized
+          chmod -R 755 ${{targets.subpkgdir}}/lib/udev_containerized
           ln -sf /usr/bin/gce-pd-csi-driver ${{targets.subpkgdir}}/gce-pd-csi-driver
+          cp deploy/kubernetes/udev/google_nvme_id ${{targets.subpkgdir}}/lib/udev_containerized/google_nvme_id
+          ln -sf /usr/lib/udev/scsi_id ${{targets.subpkgdir}}/lib/udev_containerized/scsi_id
 
 test:
   pipeline:
