use our pkgconf test pipeline

--- a/gnutls.yaml
+++ b/gnutls.yaml
@@ -86,6 +86,9 @@ subpackages:
         - p11-kit-dev
         - libtasn1-dev
     description: gnutls dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: gnutls-utils
     pipeline:
