--- a/gstreamer.yaml
+++ b/gstreamer.yaml
@@ -59,6 +59,9 @@ subpackages:
     pipeline:
       - uses: split/dev
     description: gstreamer dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: gstreamer-doc
     pipeline:
