--- a/harfbuzz.yaml
+++ b/harfbuzz.yaml
@@ -68,6 +68,9 @@ subpackages:
         - freetype-dev
         - glib-dev~2
     description: harfbuzz dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: harfbuzz-icu
     pipeline:
