--- a/libgit2.yaml
+++ b/libgit2.yaml
@@ -90,6 +90,7 @@ subpackages:
 
             gcc -o test_libgit2 test_libgit2.c -lgit2
             ./test_libgit2
+        - uses: test/pkgconf
 
   - name: "libgit2-static"
     description: "libgit2 static library"
