--- a/libpng.yaml
+++ b/libpng.yaml
@@ -66,6 +66,7 @@ subpackages:
             libpng-config --help
             libpng16-config --version
             libpng16-config --help
+        - uses: test/pkgconf
 
   - name: libpng-utils
     pipeline:
