--- a/mesa.yaml
+++ b/mesa.yaml
@@ -136,6 +136,9 @@ subpackages:
     pipeline:
       - uses: split/dev
     description: mesa dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
 test:
   environment:
