--- a/nss.yaml
+++ b/nss.yaml
@@ -90,6 +90,9 @@ subpackages:
     dependencies:
       runtime:
         - libnss
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: libnss-tools
     pipeline:
