--- a/owfs.yaml
+++ b/owfs.yaml
@@ -55,6 +55,9 @@ subpackages:
       runtime:
         - owfs
     description: owfs dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: owfs-doc
     pipeline:
