--- a/p11-kit.yaml
+++ b/p11-kit.yaml
@@ -44,6 +44,9 @@ subpackages:
       runtime:
         - p11-kit
     description: p11-kit dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: p11-kit-trust
     pipeline:
