--- a/pcre.yaml
+++ b/pcre.yaml
@@ -53,6 +53,7 @@ subpackages:
       pipeline:
         - runs: |
             pcre-config --version
+        - uses: test/pkgconf
 
   - name: pcre-doc
     pipeline:
