--- a/pcre2.yaml
+++ b/pcre2.yaml
@@ -63,6 +63,7 @@ subpackages:
       pipeline:
         - runs: |
             pcre2-config --version
+        - uses: test/pkgconf
 
   - name: "libpcre2-8-0"
     description: "pcre2 runtime library 8-bit"
