--- a/pixman.yaml
+++ b/pixman.yaml
@@ -48,6 +48,9 @@ subpackages:
       runtime:
         - pixman
     description: pixman dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
 update:
   enabled: true
