--- a/unbound.yaml
+++ b/unbound.yaml
@@ -50,6 +50,9 @@ subpackages:
     description: "headers for unbound"
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: "unbound-libs"
     description: "libraries for unbound"
