--- a/curl.yaml
+++ b/curl.yaml
@@ -72,6 +72,7 @@ subpackages:
         - runs: |
             curl-config --version
             curl-config --help
+        - uses: test/pkgconf
 
   - name: "curl-doc"
     description: "documentation for curl"
