--- a/gpgme.yaml
+++ b/gpgme.yaml
@@ -49,6 +49,9 @@ subpackages:
       runtime:
         - gpgme
     description: gpgme dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
 update:
   enabled: true
