--- a/ipset.yaml
+++ b/ipset.yaml
@@ -53,6 +53,9 @@ subpackages:
       runtime:
         - ipset
     description: ipset dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: ipset-doc
     pipeline:
