--- a/pciutils.yaml
+++ b/pciutils.yaml
@@ -75,6 +75,9 @@ subpackages:
       runtime:
         - hwdata-pci
     description: pciutils dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
 update:
   release-monitor:
