simplify passing version via ldflags
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/gcp-compute-persistent-disk-csi-driver-1.15.yaml
+++ b/gcp-compute-persistent-disk-csi-driver-1.15.yaml
@@ -62,7 +62,7 @@ pipeline:
     with:
       packages: ./cmd/gce-pd-csi-driver/main.go
       ldflags: |
-        -X main.version=$(git describe --long --tags --match='v*' --dirty 2>/dev/null || git rev-list -n1 HEAD)
+        -X main.version=v${{package.version}}
       output: gce-pd-csi-driver
 
 subpackages:
