--- a/gcp-compute-persistent-disk-csi-driver-1.15.yaml
+++ b/gcp-compute-persistent-disk-csi-driver-1.15.yaml
@@ -67,6 +67,7 @@ pipeline:
 
 subpackages:
   - name: "${{package.name}}-compat"
+    description: "compatibility package to place binaries at / as expected by upstream deployment"
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/lib/udev_containerized
