--- a/jellyfin.yaml
+++ b/jellyfin.yaml
@@ -1,7 +1,7 @@
 package:
   name: jellyfin
   version: 10.10.0
-  epoch: 0
+  epoch: 1
   description: The Free Software Media System
   copyright:
     - license: GPL-2.0-only
@@ -21,6 +21,7 @@ environment:
       - busybox
       - dotnet-8-sdk
       - ffmpeg
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
