chore(open-liberty): Try a resource bump
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/open-liberty.yaml
+++ b/open-liberty.yaml
@@ -3,6 +3,9 @@ package:
   version: 24.0.0.10
   epoch: 0
   description: "Open Liberty is a highly composable, fast to start, dynamic application server runtime environment"
+  resources:
+    cpu: 32
+    memory: 32Gi
   copyright:
     - license: EPL-2.0
 
