glew: fix warning and deps

--- a/glew.yaml
+++ b/glew.yaml
@@ -18,8 +18,11 @@ environment:
       - libxmu-dev
       - mesa-dev
       - mesa-gl
+      - mesa-libgallium
       - openssf-compiler-options
       - wolfi-base
+  environment:
+    CFLAGS: -Wno-address
 
 pipeline:
   - uses: fetch
