k3s.yaml: Add openssf-options

--- a/k3s.yaml
+++ b/k3s.yaml
@@ -1,7 +1,7 @@
 package:
   name: k3s
   version: 1.31.2.1
-  epoch: 0
+  epoch: 1
   description:
   copyright:
     - license: Apache-2.0
@@ -33,6 +33,7 @@ environment:
       - go
       - libseccomp-dev
       - libseccomp-static
+      - openssf-compiler-options
       - sqlite-dev
       - yq
       - zlib-dev
