--- a/k9s.yaml
+++ b/k9s.yaml
@@ -1,7 +1,7 @@
 package:
   name: k9s
   version: 0.32.5
-  epoch: 5
+  epoch: 6
   description: Kubernetes CLI To Manage Your Clusters In Style!
   copyright:
     - license: Apache-2.0
@@ -12,6 +12,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - go
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
