--- a/kmod.yaml
+++ b/kmod.yaml
@@ -1,7 +1,7 @@
 package:
   name: kmod
   version: "33"
-  epoch: 1
+  epoch: 2
   description: Linux kernel module management utilities
   copyright:
     - license: GPL-2.0-or-later
@@ -17,6 +17,7 @@ environment:
       - gtk-doc
       - libtool
       - libxslt
+      - openssf-compiler-options
       - openssl-dev
       - pkgconf-dev
       - scdoc
