--- a/kserve.yaml
+++ b/kserve.yaml
@@ -1,7 +1,7 @@
 package:
   name: kserve
   version: 0.13.1
-  epoch: 5
+  epoch: 6
   description: "Standardized Serverless ML Inference Platform on Kubernetes"
   copyright:
     - license: Apache-2.0
@@ -10,6 +10,7 @@ environment:
   contents:
     packages:
       - go
+      - openssf-compiler-options
       - py3.11-pip
       - python-3.11-dev
 
