--- a/kubeflow-katib.yaml
+++ b/kubeflow-katib.yaml
@@ -1,6 +1,6 @@
 package:
   name: kubeflow-katib
-  epoch: 4
+  epoch: 5
   version: 0.17.0
   description: Kubeflow Katib services
   copyright:
@@ -15,6 +15,7 @@ environment:
       - gfortran
       - go
       - hdf5-dev
+      - openssf-compiler-options
       - pcre-dev
       - py3.10-pip
       - python-3.10-dev
