--- a/glew.yaml
+++ b/glew.yaml
@@ -1,7 +1,7 @@
 package:
   name: glew
   version: 2.2.0
-  epoch: 0
+  epoch: 1
   description: "A cross-platform C/C++ extension loading library"
   copyright:
     - license: GPL-2.0-or-later
@@ -18,7 +18,11 @@ environment:
       - libxmu-dev
       - mesa-dev
       - mesa-gl
+      - mesa-libgallium
+      - openssf-compiler-options
       - wolfi-base
+  environment:
+    CFLAGS: -Wno-address
 
 pipeline:
   - uses: fetch
