chore(open-liberty): Take a stack trace
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/open-liberty.yaml
+++ b/open-liberty.yaml
@@ -32,9 +32,9 @@ pipeline:
 
   - working-directory: dev
     runs: |
-      ./gradlew cnf:initialize
-      ./gradlew assemble
-      ./gradlew releaseNeeded
+      ./gradlew --stacktrace cnf:initialize
+      ./gradlew --stacktrace assemble
+      ./gradlew --stacktrace releaseNeeded
 
       mkdir -p ${{targets.contextdir}}/usr/share/java/openliberty
       unzip -q cnf/release/dev/openliberty/${{package.version}}*/openliberty-${{package.version}}*.zip -d ${{targets.contextdir}}/usr/share/java/openliberty
