--- a/ldb.yaml
+++ b/ldb.yaml
@@ -1,7 +1,7 @@
 package:
   name: ldb
   version: 2.9.1
-  epoch: 1
+  epoch: 2
   description: schema-less, ldap like, API and database
   copyright:
     - license: LGPL-3.0-or-later
@@ -18,6 +18,7 @@ environment:
       - docbook-xml
       - libtirpc-dev
       - lmdb-dev
+      - openssf-compiler-options
       - pkgconf-dev
       - popt-dev
       - py3-tdb
