--- a/lean4.yaml
+++ b/lean4.yaml
@@ -1,7 +1,7 @@
 package:
   name: lean4
   version: 4.12.0
-  epoch: 0
+  epoch: 1
   description: "Secure Reliable Transport (SRT)"
   copyright:
     - license: Apache-2.0
@@ -19,6 +19,7 @@ environment:
       - cmake
       - gmp-dev
       - libuv-dev
+      - openssf-compiler-options
       - wolfi-base
 
 pipeline:
