less.yaml: Add openssf-options

--- a/less.yaml
+++ b/less.yaml
@@ -2,7 +2,7 @@
 package:
   name: less
   version: "668"
-  epoch: 0
+  epoch: 1
   description: File pager
   copyright:
     - license: GPL-3.0-or-later OR BSD-2-Clause
@@ -17,6 +17,7 @@ environment:
       - ca-certificates-bundle
       - groff
       - ncurses-dev
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
