--- a/libatasmart.yaml
+++ b/libatasmart.yaml
@@ -1,7 +1,7 @@
 package:
   name: libatasmart
   version: "0.19"
-  epoch: 1
+  epoch: 2
   description: ATA S.M.A.R.T. Reading and Parsing Library
   copyright:
     - license: LGPL-2.1-or-later
@@ -16,6 +16,7 @@ environment:
       - ca-certificates-bundle
       - eudev-dev
       - linux-headers
+      - openssf-compiler-options
 
 pipeline:
   - uses: fetch
