--- a/libcmis.yaml
+++ b/libcmis.yaml
@@ -1,7 +1,7 @@
 package:
   name: libcmis
   version: 0.6.2
-  epoch: 1
+  epoch: 2
   description: C/C++ CMIS client library
   copyright:
     - license: GPL-2.0-or-later
@@ -19,6 +19,7 @@ environment:
       - libtool
       - libxml2-dev
       - m4
+      - openssf-compiler-options
       - pkgconf-dev
 
 pipeline:
