--- a/libnvidia-container.yaml
+++ b/libnvidia-container.yaml
@@ -1,7 +1,7 @@
 package:
   name: libnvidia-container
   version: 1.17.0
-  epoch: 0
+  epoch: 1
   description: NVIDIA container runtime library
   copyright:
     - license: Apache-2.0
@@ -29,6 +29,7 @@ environment:
       - lsb-release-minimal
       - m4
       - nfs-utils # for rpcgen
+      - openssf-compiler-options
       - patch
       - pkgconf-dev
       - rpcgen
