--- a/py3-google-api-core.yaml
+++ b/py3-google-api-core.yaml
@@ -1,7 +1,7 @@
 package:
   name: py3-google-api-core
   version: 2.22.0
-  epoch: 0
+  epoch: 1
   description: Google API client core library
   copyright:
     - license: Apache-2.0
@@ -18,7 +18,6 @@ data:
       3.10: '310'
       3.11: '311'
       3.12: '312'
-      3.13: '300'
 
 environment:
   contents:
@@ -41,9 +40,10 @@ subpackages:
       provides:
         - py3-${{vars.pypi-package}}
       runtime:
-        - py${{range.key}}-googleapis-common-protos
-        - py${{range.key}}-protobuf
         - py${{range.key}}-google-auth
+        - py${{range.key}}-googleapis-common-protos
+        - py${{range.key}}-grpcio
+        - py${{range.key}}-protobuf
         - py${{range.key}}-requests
     pipeline:
       - uses: py/pip-build-install
@@ -65,7 +65,6 @@ subpackages:
         - py3.10-${{vars.pypi-package}}
         - py3.11-${{vars.pypi-package}}
         - py3.12-${{vars.pypi-package}}
-        - py3.13-${{vars.pypi-package}}
 
 test:
   pipeline:
