--- a/ruby3.2-activemodel.yaml
+++ b/ruby3.2-activemodel.yaml
@@ -42,6 +42,25 @@ pipeline:
 vars:
   gem: activemodel
 
+test:
+  pipeline:
+    - name: Validate import
+      runs: ruby -e "require 'active_model'"
+    - name: Basic example
+      runs: |
+        cat > example.rb <<EOF
+        require 'active_model'
+        class Person
+          include ActiveModel::Model
+          attr_accessor :name, :age
+          validates :name, presence: true
+        end
+        person = Person.new(name: 'bob')
+        puts person.valid?
+        EOF
+
+        ruby example.rb
+
 update:
   enabled: true
   github:
