chore(open-liberty): Add Docker scripts and configuration
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/open-liberty.yaml
+++ b/open-liberty.yaml
@@ -1,6 +1,6 @@
 package:
   name: open-liberty
-  version: 24.0.0.10
+  version: 24.0.0.11
   epoch: 0
   description: "Open Liberty is a highly composable, fast to start, dynamic application server runtime environment"
   resources:
@@ -8,6 +8,9 @@ package:
     memory: 32Gi
   copyright:
     - license: EPL-2.0
+
+vars:
+  open-liberty-home: "/usr/share/java/open-liberty"
 
 environment:
   contents:
@@ -36,10 +39,34 @@ pipeline:
       ./gradlew --stacktrace assemble
       ./gradlew --stacktrace releaseNeeded
 
-      mkdir -p ${{targets.contextdir}}/usr/share/java/openliberty
-      unzip -q cnf/release/dev/openliberty/${{package.version}}*/openliberty-${{package.version}}*.zip -d ${{targets.contextdir}}/usr/share/java/openliberty
+      mkdir -p ${{targets.contextdir}}/${{vars.open-liberty-home}}
+      unzip -q cnf/release/dev/openliberty/${{package.version}}*/openliberty-${{package.version}}*.zip -d ${{targets.contextdir}}/${{vars.open-liberty-home}}
 
   - uses: strip
+
+  # Tags aren't cut, a branch specific to the version of Open Liberty is created before release
+  - uses: git-checkout
+    with:
+      expected-commit: e4fb041438e51f86133be5ad296214e8a4e196d7
+      repository: https://github.com/OpenLiberty/ci.docker
+      branch: ${{package.version}}-release
+
+subpackages:
+  - name: ${{package.name}}-docker-full
+    description: Configuration and scripts for running Open Liberty in Docker - full
+    pipeline:
+      - runs: |
+          mkdir -p ${{targets.contextdir}}/${{vars.open-liberty-home}}
+          mv releases/${{package.version}}/full/helpers \
+            ${{targets.contextdir}}/${{vars.open-liberty-home}}/helpers
+
+  - name: ${{package.name}}-docker-slim
+    description: Configuration and scripts for running Open Liberty in Docker - slim
+    pipeline:
+      - runs: |
+          mkdir -p ${{targets.contextdir}}/${{vars.open-liberty-home}}
+          mv releases/${{package.version}}/kernel-slim/helpers \
+            ${{targets.contextdir}}/${{vars.open-liberty-home}}/helpers
 
 update:
   enabled: true
