spark: bump scala to latest 2.13 version
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/spark-3.5.yaml
+++ b/spark-3.5.yaml
@@ -1,10 +1,15 @@
 package:
   name: spark-3.5
   version: 3.5.3
-  epoch: 4
+  epoch: 5
   description: Unified engine for large-scale data analytics
   copyright:
     - license: Apache-2.0
+  dependencies:
+    provides:
+      - spark=${{package.full-version}}
+      - spark-3.5=${{package.full-version}}
+      - spark-3.5-scala-2.13=${{package.full-version}}
 
 environment:
   contents:
@@ -32,6 +37,7 @@ environment:
       - yaml-dev
   environment:
     LANG: en_US.UTF-8
+    SCALA_VERSION: 2.13
 
 pipeline:
   - uses: git-checkout
@@ -81,6 +87,8 @@ subpackages:
           export JAVA_HOME="/usr/lib/jvm/${{range.value}}"
           export PATH=$PATH:$JAVA_HOME/bin
 
+          ./dev/change-scala-version.sh $SCALA_VERSION
+
           ./dev/make-distribution.sh --name custom-spark --pip -Psparkr -Phive -Phive-thriftserver -Pmesos -Pyarn -Pkubernetes
 
           patch dist/bin/load-spark-env.sh load-spark-env.sh.diff
@@ -102,6 +110,8 @@ subpackages:
       pipeline:
         - name: Test ${{package.name}} with OpenJDK ${{range.key}}
           pipeline:
+            - name: Test if the Scala versions are correct
+              runs: ls /usr/lib/spark/jars/scala-* | grep -q $SCALA_VERSION
             - name: Check spark-shell --version
             - runs: /usr/lib/spark/bin/spark-shell --version
             - name: Check spark-submit --version
