--- a/jenkins.yaml
+++ b/jenkins.yaml
@@ -155,7 +155,7 @@ test:
     - name: "Check .war timestamp is being set correctly (not zero)"
       runs: |
         WAR_TIME=$(stat -c %Y /usr/share/java/jenkins/jenkins.war)
-        if [ "$WAR_TIME" -ne 0 ]; then
+        if [ "$WAR_TIME" -eq 0 ]; then
           echo "WAR file timestamp is zero"
           exit 1
         fi
