--- a/pipelines/test/pkgconf.yaml
+++ b/pipelines/test/pkgconf.yaml
@@ -15,8 +15,9 @@ pipeline:
         # Ensure this is a pkgconf .pc file
         if grep -q "^Name:" $pc_file; then
           lib_name=$(basename "$pc_file" ".pc")
-          # Ensure .pc file is installed in usr/lib/pkgconfig/*.pc
-          echo "$pc_file" | grep -q "^usr/lib/pkgconfig/${lib_name}.pc$"
+          # Ensure .pc file is installed in usr/lib/pkgconfig/*.pc or
+          # in usr/share/pkgconfig/*.pc
+          echo "$pc_file" | grep -q "^usr/lib/pkgconfig/${lib_name}.pc$\|^usr/share/pkgconfig/${lib_name}.pc$"
           # Try to get the library name from the pc filename
           # Run some package config tests, which will likely be used by
           # other packages that have build dependencies on this dev package
