pkgconf test pipeline - be more informative on a failure

--- a/pipelines/test/pkgconf.yaml
+++ b/pipelines/test/pkgconf.yaml
@@ -21,7 +21,7 @@ pipeline:
           # Try to get the library name from the pc filename
           # Run some package config tests, which will likely be used by
           # other packages that have build dependencies on this dev package
-          pkgconf --exists $lib_name
+          pkgconf --exists $lib_name || pkgconf --print-errors --exists $lib_name
           # If we have a module version in our .pc file, ensure pkgconf can get it
           if grep -q "^Version:" $pc_file; then
             pkgconf --modversion $lib_name
