--- a/linux-pam.yaml
+++ b/linux-pam.yaml
@@ -1,7 +1,7 @@
 package:
   name: linux-pam
   version: 1.7.0
-  epoch: 0
+  epoch: 1
   description: Linux PAM (Pluggable Authentication Modules for Linux)
   copyright:
     - license: BSD-3-Clause
@@ -19,6 +19,7 @@ environment:
       - gettext-dev
       - libtool
       - meson
+      - openssf-compiler-options
 
 pipeline:
   - uses: fetch
