--- a/loki-3.2.yaml
+++ b/loki-3.2.yaml
@@ -1,7 +1,7 @@
 package:
   name: loki-3.2
   version: 3.2.1
-  epoch: 0
+  epoch: 1
   description: Like Prometheus, but for logs.
   copyright:
     - license: AGPL-3.0-or-later
@@ -16,6 +16,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - go
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
