lvm2.yaml: Add openssf-options

--- a/lvm2.yaml
+++ b/lvm2.yaml
@@ -2,7 +2,7 @@
 package:
   name: lvm2
   version: 2.03.27
-  epoch: 0
+  epoch: 1
   description: Logical Volume Manager 2 utilities
   copyright:
     - license: GPL-2.0-only AND LGPL-2.1-only
@@ -23,6 +23,7 @@ environment:
       - ca-certificates-bundle
       - libaio-dev
       - linux-headers
+      - openssf-compiler-options
       - util-linux-dev
 
 pipeline:
