--- a/nvme-cli.yaml
+++ b/nvme-cli.yaml
@@ -13,6 +13,7 @@ environment:
       - build-base
       - libnvme-dev
       - meson
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
