--- a/cloud-provider-aws-1.31.yaml
+++ b/cloud-provider-aws-1.31.yaml
@@ -1,15 +1,10 @@
 package:
-  name: cloud-provider-aws
+  name: cloud-provider-aws-1.31
   version: 1.31.1
   epoch: 0
   description: The AWS cloud provider provides the interface between a Kubernetes cluster and AWS service APIs.
   copyright:
     - license: Apache-2.0
-
-environment:
-  environment:
-    CGO_ENABLED: "0"
-    GO111MODULE: "on"
 
 pipeline:
   - uses: git-checkout
@@ -19,7 +14,7 @@ pipeline:
       expected-commit: 94cb7eefd72f6577a0f7840f61a47ebd4aed06f4
 
 subpackages:
-  - name: aws-cloud-controller-manager
+  - name: ${{package.name}}-cloud-controller-manager
     description: The AWS Cloud Controller Manager is the controller that is primarily responsible for creating and updating AWS loadbalancers (classic and NLB) and node lifecycle management.
     pipeline:
       - uses: go/build
@@ -27,7 +22,6 @@ subpackages:
           packages: ./cmd/aws-cloud-controller-manager
           output: aws-cloud-controller-manager
           ldflags: |
-            -w -s
             -X k8s.io/component-base/version.gitVersion=v${{package.version}}
             -X main.gitVersion=v${{package.version}}
     test:
@@ -36,7 +30,7 @@ subpackages:
             aws-cloud-controller-manager --help
             aws-cloud-controller-manager --version
 
-  - name: ecr-credential-provider
+  - name: ${{package.name}}-ecr-credential-provider
     description: The credential provider is a binary that is executed by kubelet to provide credentials for images in ECR.
     pipeline:
       - uses: go/build
@@ -44,7 +38,6 @@ subpackages:
           packages: ./cmd/ecr-credential-provider
           output: ecr-credential-provider
           ldflags: |
-            -w -s
             -X k8s.io/component-base/version.gitVersion=v${{package.version}}
             -X main.gitVersion=v${{package.version}}
     test:
@@ -53,7 +46,7 @@ subpackages:
             ecr-credential-provider --help
             ecr-credential-provider --version
 
-  - name: "aws-cloud-controller-manager-compat"
+  - name: "${{package.name}}-cloud-controller-manager-compat"
     description: "Compatibility package to place binaries in the location expected by upstream Dockerfile"
     pipeline:
       - runs: |
@@ -65,3 +58,4 @@ update:
   github:
     identifier: kubernetes/cloud-provider-aws
     strip-prefix: v
+    tag-filter: v1.31
