--- a/malcontent.yaml
+++ b/malcontent.yaml
@@ -1,7 +1,7 @@
 package:
   name: malcontent
   version: 1.3.0
-  epoch: 0
+  epoch: 1
   description: enumerate file capabilities, including malicious behaviors
   copyright:
     - license: Apache-2.0
@@ -13,6 +13,7 @@ package:
 environment:
   contents:
     packages:
+      - openssf-compiler-options
       - openssl-dev
       - yara-dev
 
