--- a/mdbook.yaml
+++ b/mdbook.yaml
@@ -1,7 +1,7 @@
 package:
   name: mdbook
   version: 0.4.40
-  epoch: 1
+  epoch: 2
   description: "Create book from markdown files. Like Gitbook but implemented in Rust."
   copyright:
     - license: MPL-2.0
@@ -15,6 +15,7 @@ environment:
       - cargo-auditable
       - git
       - make
+      - openssf-compiler-options
       - openssl-dev
       - python3
       - rust
