--- a/meilisearch.yaml
+++ b/meilisearch.yaml
@@ -1,7 +1,7 @@
 package:
   name: meilisearch
   version: 1.11.0
-  epoch: 0
+  epoch: 1
   description: "A lightning-fast search engine that fits effortlessly into your apps, websites, and workflow."
   copyright:
     - license: MIT
@@ -12,6 +12,7 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
+      - openssf-compiler-options
       - rust
       - wolfi-base
 
