memcached.yaml: Add openssf-options

--- a/memcached.yaml
+++ b/memcached.yaml
@@ -1,7 +1,7 @@
 package:
   name: memcached
   version: 1.6.32
-  epoch: 0
+  epoch: 1
   description: "Distributed memory object caching system"
   copyright:
     - license: BSD-3-Clause
@@ -16,6 +16,7 @@ environment:
       - libevent-dev
       - libseccomp-dev
       - linux-headers
+      - openssf-compiler-options
       - pkgconf-dev
       # - bsd-compat-headers
       - wolfi-base
