--- a/mockery.yaml
+++ b/mockery.yaml
@@ -1,7 +1,7 @@
 package:
   name: mockery
   version: 2.46.3
-  epoch: 0
+  epoch: 1
   description: A mock code autogenerator for Go
   copyright:
     - license: BSD-3-Clause
@@ -10,6 +10,7 @@ environment:
   contents:
     packages:
       - go
+      - openssf-compiler-options
       - wolfi-base
 
 pipeline:
