add openssf-compiler-options at build time
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/libyang.yaml
+++ b/libyang.yaml
@@ -14,6 +14,7 @@ environment:
       - cmocka-dev
       - doxygen
       - graphviz
+      - openssf-compiler-options
       - pcre2-dev
       - tcl
       - valgrind
