--- a/ddp-tool.yaml
+++ b/ddp-tool.yaml
@@ -1,8 +1,8 @@
 #nolint:valid-pipeline-git-checkout-commit,valid-pipeline-git-checkout-tag
 package:
   name: ddp-tool
-  version: 1.0.34.0_git20241031
-  epoch: 0
+  version: 1.0.34.0_git20241101
+  epoch: 1
   description: Intel Dynamic Device Personalization Tool
   copyright:
     - license: BSD-2-Clause
@@ -14,6 +14,7 @@ environment:
       - busybox
       - gcc
       - make
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
@@ -21,6 +22,7 @@ pipeline:
       expected-commit: 3868a732013b8e8817f6453b58a170f669d99a68
       repository: https://github.com/intel/ddp-tool/
       branch: master
+      depth: -1
 
   - runs: |
       export CFLAGS=${CFLAGS/-Wp,-D_FORTIFY_SOURCE=3/}
