--- a/newrelic-nri-kube-events.yaml
+++ b/newrelic-nri-kube-events.yaml
@@ -1,7 +1,7 @@
 package:
   name: newrelic-nri-kube-events
   version: 2.11.0
-  epoch: 0
+  epoch: 1
   description: New Relic integration that forwards Kubernetes events to New Relic
   copyright:
     - license: Apache-2.0
@@ -13,6 +13,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - go
+      - openssf-compiler-options
       - wolfi-baselayout
 
 pipeline:
