--- a/nodejs-18.yaml
+++ b/nodejs-18.yaml
@@ -1,7 +1,7 @@
 package:
   name: nodejs-18
   version: 18.20.4
-  epoch: 0
+  epoch: 1
   description: "JavaScript runtime built on V8 engine - LTS version"
   copyright:
     - license: MIT
@@ -25,6 +25,7 @@ environment:
       - libuv-dev
       - linux-headers
       - nghttp2-dev
+      - openssf-compiler-options
       - openssl-dev
       - py3-jinja2
       - py3-setuptools
