--- a/nodejs-19.yaml
+++ b/nodejs-19.yaml
@@ -1,7 +1,7 @@
 package:
   name: nodejs-19
   version: 19.9.0
-  epoch: 8
+  epoch: 9
   description: "JavaScript runtime built on V8 engine"
   dependencies:
     provides:
@@ -24,6 +24,7 @@ environment:
       - libuv-dev
       - linux-headers
       - nghttp2-dev
+      - openssf-compiler-options
       - openssl-dev
       - py3-jinja2
       - py3-setuptools
