--- a/openrc.yaml
+++ b/openrc.yaml
@@ -2,7 +2,7 @@
 package:
   name: openrc
   version: 0.55.1
-  epoch: 0
+  epoch: 1
   description: OpenRC is a dependency-based init system that works with the system provided init program, normally /sbin/init.
   copyright:
     - license: BSD-2-Clause
@@ -13,6 +13,7 @@ environment:
       - build-base
       - busybox
       - linux-pam-dev
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
