--- a/opentelemetry-collector.yaml
+++ b/opentelemetry-collector.yaml
@@ -1,7 +1,7 @@
 package:
   name: opentelemetry-collector
   version: 0.112.0
-  epoch: 0
+  epoch: 1
   description: OpenTelemetry Collector
   copyright:
     - license: Apache-2.0
@@ -12,6 +12,7 @@ environment:
       - busybox
       - curl
       - go
+      - openssf-compiler-options
 
 pipeline:
   - runs: |
