--- a/parseable.yaml
+++ b/parseable.yaml
@@ -1,7 +1,7 @@
 package:
   name: parseable
   version: 1.5.5
-  epoch: 0
+  epoch: 1
   description: "Parseable is a log analytics system built for high throughput log ingestion cases."
   copyright:
     - license: AGPL-3.0-or-later
@@ -13,6 +13,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - cargo-auditable
+      - openssf-compiler-options
       - rust
 
 pipeline:
