--- a/py3-orjson.yaml
+++ b/py3-orjson.yaml
@@ -2,7 +2,7 @@
 package:
   name: py3-orjson
   version: 3.10.10
-  epoch: 0
+  epoch: 1
   description: Fast, correct Python JSON library supporting dataclasses, datetimes, and numpy
   copyright:
     - license: Apache-2.0 OR MIT
@@ -27,6 +27,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - maturin
+      - openssf-compiler-options
       - py3-supported-maturin
       - py3-supported-pip
       - py3-supported-python
