--- a/py3-pydantic-core.yaml
+++ b/py3-pydantic-core.yaml
@@ -2,7 +2,7 @@
 package:
   name: py3-pydantic-core
   version: 2.25.1
-  epoch: 0
+  epoch: 1
   copyright:
     - license: MIT
   dependencies:
@@ -15,6 +15,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - maturin
+      - openssf-compiler-options
       - py3-supported-build
       - py3-supported-installer
       - py3-supported-maturin
