qt6-qtbase.yaml: Add openssf-options

--- a/qt6-qtbase.yaml
+++ b/qt6-qtbase.yaml
@@ -3,7 +3,7 @@
 package:
   name: qt6-qtbase
   version: 6.8.0
-  epoch: 1
+  epoch: 2
   description: qt
   copyright:
     - license: LGPL-3.0-or-later
@@ -46,6 +46,7 @@ environment:
       - mesa-gl
       - mesa-gles
       - nodejs
+      - openssf-compiler-options
       - perl
       - py3-pip
       - samurai
