--- a/redka.yaml
+++ b/redka.yaml
@@ -1,7 +1,7 @@
 package:
   name: redka
   version: 0.5.2
-  epoch: 2
+  epoch: 3
   description: Redis re-implemented with SQLite
   copyright:
     - license: BSD-3-Clause
@@ -15,6 +15,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - go
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
