--- a/reflex.yaml
+++ b/reflex.yaml
@@ -1,7 +1,7 @@
 package:
   name: reflex
   version: 0.6.4
-  epoch: 0
+  epoch: 1
   description: "Web apps in pure Python"
   copyright:
     - license: Apache-2.0
@@ -19,6 +19,7 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
+      - openssf-compiler-options
       - poetry
       - py3-pip
       - py3-setuptools
