--- a/rook.yaml
+++ b/rook.yaml
@@ -1,7 +1,7 @@
 package:
   name: rook
   version: 1.15.4
-  epoch: 0
+  epoch: 1
   description: Storage Orchestration for Kubernetes
   copyright:
     - license: Apache-2.0
@@ -13,6 +13,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - go
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
