--- a/ruff.yaml
+++ b/ruff.yaml
@@ -1,7 +1,7 @@
 package:
   name: ruff
   version: 0.7.1
-  epoch: 0
+  epoch: 1
   description: An extremely fast Python linter, written in Rust.
   copyright:
     - license: MIT
@@ -13,6 +13,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - cargo-auditable
+      - openssf-compiler-options
       - rust
 
 pipeline:
