--- a/runc.yaml
+++ b/runc.yaml
@@ -1,7 +1,7 @@
 package:
   name: runc
   version: 1.2.0
-  epoch: 0
+  epoch: 1
   description: CLI tool for spawning and running containers according to the OCI specification
   copyright:
     - license: Apache-2.0
@@ -19,6 +19,7 @@ environment:
       - go-md2man
       - libseccomp-dev
       - libtool
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
