--- a/semgrep.yaml
+++ b/semgrep.yaml
@@ -1,7 +1,7 @@
 package:
   name: semgrep
   version: 1.94.0
-  epoch: 0
+  epoch: 1
   description: "Lightweight static analysis for many languages. Find bug variants with patterns that look like source code."
   copyright:
     - license: LGPL-2.1-or-later
@@ -26,6 +26,7 @@ environment:
       - libffi-dev
       - ocaml
       - opam
+      - openssf-compiler-options
       - openssl-dev
       - patch # needed for 'opam init'
       - pcre-dev # linked against
