--- a/spqr.yaml
+++ b/spqr.yaml
@@ -1,7 +1,7 @@
 package:
   name: spqr
   version: "2.0"
-  epoch: 0
+  epoch: 1
   description: Stateless Postgres Query Router
   copyright:
     - license: BSD-2-Clause
@@ -16,6 +16,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - go
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
