sqlite.yaml: Add openssf-options

--- a/sqlite.yaml
+++ b/sqlite.yaml
@@ -1,7 +1,7 @@
 package:
   name: sqlite
   version: 3.46.1
-  epoch: 0
+  epoch: 1
   description: "C library which implements an SQL database engine"
   copyright:
     - license: blessing
@@ -12,6 +12,7 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
+      - openssf-compiler-options
       - readline
 
 # ref: https://www.sqlite.org/download.html
