--- a/tailscale.yaml
+++ b/tailscale.yaml
@@ -1,7 +1,7 @@
 package:
   name: tailscale
   version: 1.76.1
-  epoch: 0
+  epoch: 1
   description: The easiest, most secure way to use WireGuard and 2FA.
   copyright:
     - license: BSD-3-Clause
@@ -14,6 +14,7 @@ environment:
       - ca-certificates-bundle
       - curl
       - go
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
