--- a/teleport.yaml
+++ b/teleport.yaml
@@ -1,7 +1,7 @@
 package:
   name: teleport
   version: 16.4.6
-  epoch: 0
+  epoch: 1
   description: The easiest, and most secure way to access and protect all of your infrastructure.
   copyright:
     - license: AGPL-3.0-only
@@ -22,6 +22,7 @@ environment:
       - go-1.22
       - node-gyp
       - nodejs
+      - openssf-compiler-options
       - openssl-dev
       - pnpm
       - python3
