--- a/tflint.yaml
+++ b/tflint.yaml
@@ -1,7 +1,7 @@
 package:
   name: tflint
   version: 0.53.0
-  epoch: 1
+  epoch: 2
   description: A Pluggable Terraform Linter
   copyright:
     - license: MPL-2.0
@@ -14,6 +14,7 @@ environment:
       - ca-certificates-bundle
       - git
       - go
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
