--- a/tkn.yaml
+++ b/tkn.yaml
@@ -1,7 +1,7 @@
 package:
   name: tkn
   version: 0.38.1
-  epoch: 0
+  epoch: 1
   description: A CLI for interacting with Tekton!
   copyright:
     - license: Apache-2.0
@@ -13,6 +13,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - go
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
