ugrep.yaml: Add openssf-options

--- a/ugrep.yaml
+++ b/ugrep.yaml
@@ -2,7 +2,7 @@
 package:
   name: ugrep
   version: 7.0.2
-  epoch: 0
+  epoch: 1
   description: Ultra fast grep with interactive query UI and fuzzy search
   copyright:
     - license: BSD-3-Clause
@@ -19,6 +19,7 @@ environment:
       - ca-certificates-bundle
       - libbzip3
       - lz4-dev
+      - openssf-compiler-options
       - pcre2-dev
       - xz-dev
       - zlib-dev
