uutils.yaml: Add openssf-options

--- a/uutils.yaml
+++ b/uutils.yaml
@@ -1,7 +1,7 @@
 package:
   name: uutils
   version: 0.0.27
-  epoch: 2
+  epoch: 3
   description: "Cross-platform Rust rewrite of the GNU coreutils."
   copyright:
     - license: MIT
@@ -16,6 +16,7 @@ environment:
       - build-base
       - ca-certificates-bundle
       - cargo-auditable
+      - openssf-compiler-options
       - rust
       - wolfi-base
 
