--- a/vim.yaml
+++ b/vim.yaml
@@ -1,7 +1,7 @@
 package:
   name: vim
   version: 9.1.0825
-  epoch: 0
+  epoch: 1
   description: "Improved vi-style text editor"
   copyright:
     - license: Vim
@@ -14,6 +14,7 @@ environment:
       - ca-certificates-bundle
       - lua5.3-dev
       - ncurses-dev
+      - openssf-compiler-options
       - python3-dev
       - wolfi-base
 
