--- a/wasmcloud.yaml
+++ b/wasmcloud.yaml
@@ -1,7 +1,7 @@
 package:
   name: wasmcloud
   version: 1.4.0
-  epoch: 0
+  epoch: 1
   description: "wasmCloud allows for simple, secure, distributed application development using WebAssembly components and capability providers."
   copyright:
     - license: Apache-2.0
@@ -13,6 +13,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - cargo-auditable
+      - openssf-compiler-options
       - rust
 
 pipeline:
