--- a/wget.yaml
+++ b/wget.yaml
@@ -1,7 +1,7 @@
 package:
   name: wget
   version: 1.24.5
-  epoch: 4
+  epoch: 5
   description: "GNU wget"
   copyright:
     - license: MPL-2.0 AND MIT
@@ -12,6 +12,7 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
+      - openssf-compiler-options
       - openssl-dev
 
 pipeline:
