--- a/xorg-server.yaml
+++ b/xorg-server.yaml
@@ -1,7 +1,7 @@
 package:
   name: xorg-server
   version: 21.1.14
-  epoch: 0
+  epoch: 1
   description: "X Server"
   copyright:
     - license: SGI-B-2.0
@@ -43,6 +43,7 @@ environment:
       - mesa-gbm
       - mesa-gl
       - mesa-libgallium
+      - openssf-compiler-options
       - openssl-dev
       - pixman-dev
       - zlib-dev
