--- a/zeromq.yaml
+++ b/zeromq.yaml
@@ -1,7 +1,7 @@
 package:
   name: zeromq
   version: 4.3.5
-  epoch: 1
+  epoch: 2
   description: The ZeroMQ messaging library and tools
   copyright:
     - license: MPL-2.0
@@ -14,6 +14,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - libsodium-dev
+      - openssf-compiler-options
       - perl
       - util-linux-dev
       - xmlto
