openssf-compiler-options: add -Wno-error

--- a/openssf-compiler-options/etc/clang/common.cfg
+++ b/openssf-compiler-options/etc/clang/common.cfg
@@ -30,3 +30,6 @@
 
 # enable stack pointers for profiling
 -fno-omit-frame-pointer -mno-omit-leaf-frame-pointer
+
+# Don't error for warnings these options are causing a fair number of them.
+-Wno-error
