add test/pkgconf test to dev packages
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/libnvme.yaml
+++ b/libnvme.yaml
@@ -43,6 +43,9 @@ subpackages:
         - libnvme
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
 update:
   enabled: true
