--- a/libyang.yaml
+++ b/libyang.yaml
@@ -47,6 +47,9 @@ subpackages:
         - libyang
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: libyang-doc
     pipeline:
