--- a/rtrlib.yaml
+++ b/rtrlib.yaml
@@ -44,6 +44,9 @@ subpackages:
         - rtrlib
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: rtrlib-doc
     description: rtrlib manpages
