--- a/py3-sentencepiece.yaml
+++ b/py3-sentencepiece.yaml
@@ -73,7 +73,7 @@ subpackages:
 
 test:
   pipeline:
-    - uses: test/pkgconf
+    - uses: python/import
       with:
         import: ${{vars.pypi-package}}
 
