Update git patches for vuln remediation, to work with the latest git release
Signed-off-by: Mark McCormick <mark.mccormick@chainguard.dev>

--- a/management-api-for-apache-cassandra-5.0.yaml
+++ b/management-api-for-apache-cassandra-5.0.yaml
@@ -29,9 +29,12 @@ pipeline:
       expected-commit: e65215c742387792afaa779975bc2bc38b4f3d3a
       tag: v${{package.version}}
 
+  # We can't (currently), use pombump, as this repo places license info as
+  # code comments, embedded in the pom.xml files. pombump currently isn't able
+  # to handle this. Internal issue create to track.
   - uses: patch
     with:
-      patches: upgrade-deps.patch GHSA-5jpm-x58v-624v.patch
+      patches: pom-xml.patch mgmt-api-server-pom-xml.patch mgmt-api-agent-5.0.x-pom-xml.patch
 
   - runs: |
       echo "Running build..."
