--- a/trino.yaml
+++ b/trino.yaml
@@ -25,7 +25,7 @@ environment:
       - git
       - jvmkill
       - maven
-      - openjdk-22
+      - openjdk-23
       - wolfi-base
 
 pipeline:
@@ -35,18 +35,10 @@ pipeline:
       tag: ${{package.version}}
       expected-commit: 299842e3cddde87b2f4b2589edbe53c41743f71a
 
-  - uses: maven/pombump
-
-  - uses: maven/pombump
-    with:
-      patch-file: ""
-      properties-file: pombump-properties-es.yaml
-      pom: plugin/trino-elasticsearch/pom.xml
-
   - runs: |
       set -x
 
-      export JAVA_HOME=/usr/lib/jvm/java-22-openjdk
+      export JAVA_HOME=/usr/lib/jvm/java-23-openjdk
 
       ./mvnw package -q -DskipTests -Dmaven.source.skip=true -Dair.check.skip-all -T 8  -pl '!:trino-docs,!:trino-server-rpm,!:trino-tests,!:trino-product-tests,!:trino-product-tests-launcher,!:trino-web-ui' -am
 
@@ -64,7 +56,6 @@ pipeline:
 data:
   - name: plugins
     items:
-      accumulo: accumulo
       bigquery: bigquery
       blackhole: blackhole
       cassandra: cassandra
@@ -73,17 +64,21 @@ data:
       druid: druid
       elasticsearch: elasticsearch
       example-http: example-http
+      exasol: exasol
       exchange-filesystem: exchange-filesystem
       exchange-hdfs: exchange-hdfs
+      faker: faker
       geospatial: geospatial
       google-sheets: google-sheets
       hive: hive
       http-event-listener: http-event-listener
+      http-server-event-listener: http-server-event-listener
       hudi: hudi
       iceberg: iceberg
       ignite: ignite
       jmx: jmx
       kafka: kafka
+      kafka-event-listener: kafka-event-listener
       kinesis: kinesis
       kudu: kudu
       mariadb: mariadb
@@ -92,6 +87,9 @@ data:
       mongodb: mongodb
       mysql: mysql
       mysql-event-listener: mysql-event-listener
+      opa: opa
+      openlineage: openlineage
+      opensearch: opensearch
       oracle: oracle
       password-authenticators: password-authenticators
       # phoenix5: phoenix5 # phoenix5 is riddled with CVEs, so we're not including it.
@@ -103,11 +101,13 @@ data:
       resource-group-managers: resource-group-managers
       session-property-managers: session-property-managers
       singlestore: singlestore
+      snowflake: snowflake
       sqlserver: sqlserver
       teradata-functions: teradata-functions
       thrift: thrift
       tpcds: tpcds
       tpch: tpch
+      vertica: vertica
 
 subpackages:
   - name: ${{package.name}}-config
