--- a/open-liberty.yaml
+++ b/open-liberty.yaml
@@ -35,9 +35,9 @@ pipeline:
 
   - working-directory: dev
     runs: |
-      ./gradlew --refresh-dependencies --stacktrace cnf:initialize
-      ./gradlew --refresh-dependencies --stacktrace assemble
-      ./gradlew --refresh-dependencies --stacktrace releaseNeeded
+      ./gradlew --refresh-dependencies --stacktrace cnf:initialize -x test
+      ./gradlew --refresh-dependencies --stacktrace assemble -x test
+      ./gradlew --refresh-dependencies --stacktrace releaseNeeded -x test
 
       mkdir -p ${{targets.contextdir}}/${{vars.open-liberty-home}}
       unzip -q cnf/release/dev/openliberty/${{package.version}}*/openliberty-${{package.version}}*.zip -d ${{targets.contextdir}}/${{vars.open-liberty-home}}
