Add missing `mount` dependency.
Without this I see:
```
[    0.185071] (mount)[69]: dev-hugepages.mount: Failed at step EXEC spawning /bin/mount: No such file or directory
[    0.186754] (mount)[70]: dev-mqueue.mount: Failed at step EXEC spawning /bin/mount: No such file or directory
[    0.187330] (mount)[71]: sys-kernel-debug.mount: Failed at step EXEC spawning /bin/mount: No such file or directory
[    0.191136] (mount)[72]: tmp.mount: Failed at step EXEC spawning /bin/mount: No such file or directory
```

Signed-off-by: Matt Moore <mattmoor@chainguard.dev>

--- a/systemd.yaml
+++ b/systemd.yaml
@@ -116,6 +116,7 @@ subpackages:
       runtime:
         - ${{package.name}}
         - tzdata
+        - mount
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/etc
