Add more pkgconf tests (#33024)
Add more pkgconf tests for a plethora of packages.

---------

Co-authored-by: Dustin Kirkland <dustin.kirkland@gmail.com>
Co-authored-by: Brian Murray <brian-murray@chainguard.dev>

--- a/numactl.yaml
+++ b/numactl.yaml
@@ -45,6 +45,9 @@ subpackages:
     description: "numactl dev"
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
 update:
   enabled: true
