--- a/openrc.yaml
+++ b/openrc.yaml
@@ -81,6 +81,9 @@ subpackages:
         - openrc
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: agetty-openrc
     description: "agetty program from util-linux (OpenRC init scripts)"
