--- a/wasmer.yaml
+++ b/wasmer.yaml
@@ -1,7 +1,7 @@
 package:
   name: wasmer
   version: 5.0.0
-  epoch: 0
+  epoch: 1
   description: The leading WebAssembly Runtime supporting WASI and Emscripten.
   copyright:
     - license: MIT
@@ -13,6 +13,7 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
+      - openssf-compiler-options
       - rust
 
 pipeline:
