--- a/valgrind.yaml
+++ b/valgrind.yaml
@@ -1,7 +1,7 @@
 package:
   name: valgrind
   version: 3.24.0
-  epoch: 0
+  epoch: 1
   description: "Tool to help find memory-management problems in programs"
   copyright:
     - license: GPL-2.0-or-later
@@ -15,6 +15,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - linux-headers
+      - openssf-compiler-options
       - perl
       - python3
       - sed
