--- a/vcluster.yaml
+++ b/vcluster.yaml
@@ -1,7 +1,7 @@
 package:
   name: vcluster
   version: 0.20.4
-  epoch: 0
+  epoch: 1
   description: Create fully functional virtual Kubernetes clusters
   copyright:
     - license: Apache-2.0
@@ -13,6 +13,7 @@ environment:
   contents:
     packages:
       - helm
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
