py3-jiter.yaml: Add openssf-options (#32881)
Signed-off-by: Justin Vreeland <justinvreeland@users.noreply.github.com>

--- a/py3-jiter.yaml
+++ b/py3-jiter.yaml
@@ -1,7 +1,7 @@
 package:
   name: py3-jiter
   version: 0.7.0
-  epoch: 0
+  epoch: 1
   description: Fast iterable JSON parser
   copyright:
     - license: MIT
@@ -26,6 +26,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - maturin
+      - openssf-compiler-options
       - py3-supported-maturin
       - py3-supported-orjson
       - py3-supported-pip
