--- a/libsdl3.yaml
+++ b/libsdl3.yaml
@@ -13,6 +13,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - openssf-compiler-options
+      - wayland-dev
 
 pipeline:
   - uses: git-checkout
