fix(open-liberty): Prevent maven repos from clashing for each arch
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/open-liberty.yaml
+++ b/open-liberty.yaml
@@ -33,12 +33,13 @@ pipeline:
       expected-commit: daad205e2831f1d46bdb56781f75a0f17eaf9e3d
       repository: https://github.com/OpenLiberty/open-liberty
       tag: gm-${{package.version}}
+      destination: ${{build.arch}}
 
-  - working-directory: dev
+  - working-directory: ${{build.arch}}/dev
     runs: |
-      ./gradlew --refresh-dependencies --stacktrace cnf:initialize
-      ./gradlew --refresh-dependencies --stacktrace assemble
-      ./gradlew --refresh-dependencies --stacktrace releaseNeeded
+      ./gradlew cnf:initialize
+      ./gradlew assemble
+      ./gradlew releaseNeeded
 
       mkdir -p ${{targets.contextdir}}/${{vars.open-liberty-home}}
       unzip -q cnf/release/dev/openliberty/${{package.version}}*/openliberty-${{package.version}}*.zip -d ${{targets.contextdir}}/${{vars.open-liberty-home}}
