chore(open-liberty): Use the superior bsdtar
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/open-liberty.yaml
+++ b/open-liberty.yaml
@@ -20,9 +20,9 @@ environment:
       - ca-certificates-bundle
       - curl
       - gradle
+      - libarchive-tools
       - openjdk-21
       - openjdk-21-default-jvm
-      - unzip
   environment:
     LANG: en_US.UTF-8
     JAVA_HOME: /usr/lib/jvm/java-21-openjdk
@@ -42,7 +42,7 @@ pipeline:
       ./gradlew releaseNeeded
 
       mkdir -p ${{targets.contextdir}}/${{vars.open-liberty-home}}
-      unzip -q cnf/release/dev/openliberty/${{package.version}}*/openliberty-${{package.version}}*.zip -d ${{targets.contextdir}}/${{vars.open-liberty-home}}
+      bsdtar xvf cnf/release/dev/openliberty/${{package.version}}*/openliberty-${{package.version}}*.zip --strip-components=1 -C ${{targets.contextdir}}/${{vars.open-liberty-home}}
 
   - uses: strip
 
@@ -84,7 +84,7 @@ test:
         - openjdk-21-default-jvm
   pipeline:
     - runs: |
-        export PATH="/usr/share/java/open-liberty/wlp/bin:$PATH"
+        export PATH="/usr/share/java/open-liberty/bin:$PATH"
         server help
         client help
         server create
