fix(open-liberty): Enable parallelism and drop our gradle
The wrapper fetches the needed version of gradle regardless of us
providing it

Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/open-liberty.yaml
+++ b/open-liberty.yaml
@@ -19,7 +19,6 @@ environment:
       - busybox
       - ca-certificates-bundle
       - curl
-      - gradle
       - libarchive-tools
       - openjdk-21
       - openjdk-21-default-jvm
@@ -33,13 +32,12 @@ pipeline:
       expected-commit: daad205e2831f1d46bdb56781f75a0f17eaf9e3d
       repository: https://github.com/OpenLiberty/open-liberty
       tag: gm-${{package.version}}
-      destination: ${{build.arch}}
 
-  - working-directory: ${{build.arch}}/dev
+  - working-directory: dev
     runs: |
-      ./gradlew cnf:initialize
-      ./gradlew assemble
-      ./gradlew releaseNeeded
+      ./gradlew --parallel cnf:initialize
+      ./gradlew --parallel assemble
+      ./gradlew --parallel releaseNeeded
 
       mkdir -p ${{targets.contextdir}}/${{vars.open-liberty-home}}
       bsdtar xvf cnf/release/dev/openliberty/${{package.version}}*/openliberty-${{package.version}}*.zip --strip-components=1 -C ${{targets.contextdir}}/${{vars.open-liberty-home}}
