Add 'wayland-protocols' to buildtime dependencies - we believe it is now required to compile the most recent version of this application
Signed-off-by: Mark McCormick <mark.mccormick@chainguard.dev>

--- a/libsdl3.yaml
+++ b/libsdl3.yaml
@@ -14,6 +14,7 @@ environment:
       - ca-certificates-bundle
       - openssf-compiler-options
       - wayland-dev
+      - wayland-protocols
 
 pipeline:
   - uses: git-checkout
