--- a/kyverno-1.13.yaml
+++ b/kyverno-1.13.yaml
@@ -11,6 +11,12 @@ package:
     provides:
       - kyverno=${{package.full-version}}
 
+var-transforms:
+  - from: ${{package.name}}
+    match: '.*-(\d+\.\d+).*'
+    replace: '$1'
+    to: kyverno-version
+
 environment:
   contents:
     packages:
@@ -30,7 +36,7 @@ pipeline:
 
   - uses: go/bump
     with:
-      deps: golang.org/x/net@v0.23.0 github.com/Azure/azure-sdk-for-go/sdk/azidentity@v1.6.0 go.opentelemetry.io/contrib/instrumentation/net/http/otelhttp@v0.55.0 go.opentelemetry.io/otel@v1.30.0 go.opentelemetry.io/otel/exporters/otlp/otlpmetric/otlpmetricgrpc@v1.30.0 go.opentelemetry.io/otel/exporters/otlp/otlptrace@v1.30.0 go.opentelemetry.io/otel/exporters/otlp/otlptrace/otlptracegrpc@v1.30.0 go.opentelemetry.io/otel/exporters/prometheus@v0.52.0 go.opentelemetry.io/otel/metric@v1.30.0 go.opentelemetry.io/otel/sdk@v1.30.0 go.opentelemetry.io/otel/sdk/metric@v1.30.0 go.opentelemetry.io/otel/trace@v1.30.0 github.com/open-policy-agent/opa@v0.68.0
+      deps: go.opentelemetry.io/contrib/instrumentation/net/http/otelhttp@v0.55.0 go.opentelemetry.io/otel@v1.30.0 go.opentelemetry.io/otel/exporters/otlp/otlpmetric/otlpmetricgrpc@v1.30.0 go.opentelemetry.io/otel/exporters/otlp/otlptrace@v1.30.0 go.opentelemetry.io/otel/exporters/otlp/otlptrace/otlptracegrpc@v1.30.0 go.opentelemetry.io/otel/exporters/prometheus@v0.52.0 go.opentelemetry.io/otel/metric@v1.30.0 go.opentelemetry.io/otel/sdk@v1.30.0 go.opentelemetry.io/otel/sdk/metric@v1.30.0 go.opentelemetry.io/otel/trace@v1.30.0 github.com/open-policy-agent/opa@v0.68.0
 
   - uses: patch
     # This patch (ideally) can be removed when a new release is cut by the kyverno maintainers.
@@ -45,7 +51,7 @@ pipeline:
   - uses: strip
 
 subpackages:
-  - name: kyverno-init-container-1.12
+  - name: kyverno-init-container-${{vars.kyverno-version}}
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
@@ -58,7 +64,7 @@ subpackages:
         - runs: |
             kyvernopre --help
 
-  - name: kyverno-reports-controller-1.12
+  - name: kyverno-reports-controller-${{vars.kyverno-version}}
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
@@ -71,7 +77,7 @@ subpackages:
         - runs: |
             reports-controller --help
 
-  - name: kyverno-background-controller-1.12
+  - name: kyverno-background-controller-${{vars.kyverno-version}}
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
@@ -84,7 +90,7 @@ subpackages:
         - runs: |
             background-controller --help
 
-  - name: kyverno-cleanup-controller-1.12
+  - name: kyverno-cleanup-controller-${{vars.kyverno-version}}
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
@@ -97,7 +103,7 @@ subpackages:
         - runs: |
             cleanup-controller --help
 
-  - name: kyverno-cli-1.12
+  - name: kyverno-cli-${{vars.kyverno-version}}
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
