Add 'libxkbcommon-dev' to buildtime deps, as it may be a dependency of wayland (another runtime dep). Attempting to see if this resolves package build issue
Signed-off-by: Mark McCormick <mark.mccormick@chainguard.dev>

--- a/libsdl3.yaml
+++ b/libsdl3.yaml
@@ -12,6 +12,7 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
+      - libxkbcommon-dev
       - openssf-compiler-options
       - wayland-dev
       - wayland-protocols
