--- a/uv.yaml
+++ b/uv.yaml
@@ -53,7 +53,7 @@ test:
         uv add ruff
         uv run ruff check
     - name: uv toolings
-      runs:
+      runs: |
         uv tool install ruff
         uv venv
         uv python list
