add missing x11 dev headers
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/libsdl3.yaml
+++ b/libsdl3.yaml
@@ -12,6 +12,8 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
+      - libx11-dev
+      - libxext-dev
       - libxkbcommon-dev
       - openssf-compiler-options
       - wayland-dev
@@ -41,6 +43,9 @@ subpackages:
         - libsdl3
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
 update:
   enabled: true
