provide missing build-time deps
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/libsdl3.yaml
+++ b/libsdl3.yaml
@@ -9,13 +9,28 @@ package:
 environment:
   contents:
     packages:
+      - alsa-lib-dev
       - build-base
       - busybox
       - ca-certificates-bundle
+      - dbus-dev
+      - jack-dev
+      - libdrm-dev
+      - libunwind-dev
+      - libusb-dev
       - libx11-dev
+      - libxcursor-dev
       - libxext-dev
+      - libxfixes-dev
+      - libxi-dev
       - libxkbcommon-dev
+      - libxrandr-dev
+      - libxss-dev
+      - mesa-dev
+      - mesa-gbm
       - openssf-compiler-options
+      - pulseaudio-dev
+      - sndio-dev
       - wayland-dev
       - wayland-protocols
 
