fix sndiod test
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/sndio.yaml
+++ b/sndio.yaml
@@ -85,11 +85,7 @@ test:
           uid: 1001
       run-as: sndiod
   pipeline:
-    - name: Verify sndiod daemon starts
-      uses: test/daemon-check-output
-      with:
-        start: "sndiod -d -f rsnd/0"
-        timeout: 60
-        expected_output: " " # It doesn't output anything
-        post: |
-          pgrep sndiod
+    - runs: |
+        sndiod -d -f rsnd/0 &
+        sleep 3
+        pgrep sndiod
