add missing accounts to sndio
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/sndio.yaml
+++ b/sndio.yaml
@@ -80,9 +80,13 @@ update:
 test:
   environment:
     accounts:
+      groups:
+        - groupname: sndiod
+          gid: 1001
       users:
         - username: sndiod
           uid: 1001
+          gid: 1001
       run-as: sndiod
   pipeline:
     - runs: |
