use sudo-rs for test
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/sndio.yaml
+++ b/sndio.yaml
@@ -79,17 +79,13 @@ update:
 
 test:
   environment:
-    accounts:
-      groups:
-        - groupname: sndiod
-          gid: 1001
-      users:
-        - username: sndiod
-          uid: 1001
-          gid: 1001
-      run-as: sndiod
+    contents:
+      packages:
+        - shadow
+        - sudo-rs
   pipeline:
     - runs: |
-        sndiod -d -f rsnd/0 &
+        useradd sndiod
+        sudo -u sndiod sndiod -d -f rsnd/0 &
         sleep 3
         pgrep sndiod
