--- a/onetbb.yaml
+++ b/onetbb.yaml
@@ -32,7 +32,9 @@ pipeline:
   - uses: cmake/configure
     with:
       opts: |
-        -DTBB4PY_BUILD=ON
+        -DTBB4PY_BUILD=ON \
+        -DCMAKE_BUILD_TYPE=Release \
+        -DTBB_TEST=OFF
 
   - uses: cmake/build
 
@@ -76,3 +78,24 @@ update:
     strip-prefix: v
     tag-filter: v
     use-tag: true
+
+test:
+  environment:
+    contents:
+      packages:
+        - wolfi-base
+        - gcc
+        - glibc-dev
+        - onetbb-dev
+  pipeline:
+    - name: Compile and run basic threading test
+      runs: |
+        echo '#include <tbb/tbb.h>
+        #include <iostream>
+        int main() {
+            tbb::parallel_for(0, 10, [](int i) { std::cout << i << " "; });
+            std::cout << std::endl;
+            return 0;
+        }' > threading_test.cpp
+        g++ threading_test.cpp -o threading_test -ltbb
+        ./threading_test
