use rc versioning
Signed-off-by: Dentrax <furkan.turkal@chainguard.dev>

--- a/opa-envoy.yaml
+++ b/opa-envoy.yaml
@@ -1,6 +1,6 @@
 package:
   name: opa-envoy
-  version: 0.70.0-envoy-1
+  version: 0.70.0_rc1
   epoch: 0
   description: A plugin to enforce OPA policies with Envoy.
   copyright:
