use libyang-dev for this version
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/frr-10.1.yaml
+++ b/frr-10.1.yaml
@@ -22,7 +22,7 @@ environment:
       - json-c-dev
       - libcap-dev
       - libtool
-      - libyang-2.1-dev
+      - libyang-dev
       - linenoise-dev
       - lua5.3
       - lua5.3-dev
