fix runtime dependency
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/frr-10.1.yaml
+++ b/frr-10.1.yaml
@@ -81,7 +81,7 @@ subpackages:
     description: dev library for frr
     dependencies:
       runtime:
-        - frr
+        - frr-10.1
     pipeline:
       - uses: split/dev
     test:
