make things even better consider version stream
now we don't hardcode so updates PR should be good now.

Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/frr-10.1.yaml
+++ b/frr-10.1.yaml
@@ -6,6 +6,8 @@ package:
   copyright:
     - license: GPL-2.0-only
   dependencies:
+    provides:
+      - frr=${{package.full-version}}
     runtime:
       - python-3.11
 
@@ -81,7 +83,7 @@ subpackages:
     description: dev library for frr
     dependencies:
       runtime:
-        - frr-10.1
+        - frr=${{package.full-version}}
     pipeline:
       - uses: split/dev
     test:
