grep for version in tests
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/frr-10.1.yaml
+++ b/frr-10.1.yaml
@@ -106,6 +106,6 @@ test:
   pipeline:
     - name: "version and help tests"
       runs: |
-        /usr/lib/frr/zebra --version
-        /usr/lib/frr/bgpd --version
-        /usr/lib/frr/bfdd --version
+        /usr/lib/frr/zebra --version | grep ${{package.version}}
+        /usr/lib/frr/bgpd --version | grep ${{package.version}}
+        /usr/lib/frr/bfdd --version | grep ${{package.version}}
