don't hardcode subpackage name
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/frr-10.1.yaml
+++ b/frr-10.1.yaml
@@ -79,8 +79,8 @@ pipeline:
   - uses: strip
 
 subpackages:
-  - name: frr-dev
-    description: dev library for frr
+  - name: ${{package.name}}-dev
+    description: dev library for ${{package.name}}
     dependencies:
       runtime:
         - frr=${{package.full-version}}
@@ -90,10 +90,10 @@ subpackages:
       pipeline:
         - uses: test/pkgconf
 
-  - name: frr-debug
+  - name: ${{package.name}}-debug
     pipeline:
       - uses: split/debug
-    description: frr debug
+    description: ${{package.name}} debug
 
 update:
   enabled: true
@@ -104,7 +104,7 @@ update:
 
 test:
   pipeline:
-    - name: "version and help tests"
+    - name: "version tests"
       runs: |
         /usr/lib/frr/zebra --version | grep ${{package.version}}
         /usr/lib/frr/bgpd --version | grep ${{package.version}}
