--- a/cloud-provider-azure-1.31.yaml
+++ b/cloud-provider-azure-1.31.yaml
@@ -1,5 +1,5 @@
 package:
-  name: cloud-provider-azure
+  name: cloud-provider-azure-1.31
   version: 1.31.1
   epoch: 0
   description: Cloud provider for Azure
