fix(sustaining): remove kudu plugin (unfixable CVE)

--- a/trino.yaml
+++ b/trino.yaml
@@ -80,7 +80,7 @@ data:
       kafka: kafka
       kafka-event-listener: kafka-event-listener
       kinesis: kinesis
-      kudu: kudu
+      # kudu: kudu # kudu has an unfixable CVE (GHSA-735f-pc8j-v9w8), so we're not incuding it.
       mariadb: mariadb
       memory: memory
       ml: ml
