Add pkgconf test pipeline for systemd

--- a/systemd.yaml
+++ b/systemd.yaml
@@ -59,6 +59,9 @@ subpackages:
         - libudev
     pipeline:
       - uses: split/dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: "libudev"
     description: "udev library"
