use shorter form of grepping
Co-authored-by: Jamon Camisso <jamonation@users.noreply.github.com>
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/libyang.yaml
+++ b/libyang.yaml
@@ -120,6 +120,4 @@ test:
         gcc -o yang yang.c -l:libyang.so -DLIBYANG_VERSION=\"$(pkg-config --modversion libyang)\"
         ./yang
         ./yang | grep ${{package.version}}
-        ./yang | grep "parsed"
-        ./yang | grep "example"
-        ./yang | grep "yang module"
+        ./yang | grep "parsed 'example' yang module"
