Update var name to be 'major-minor-version' to be more standard with other packages
Signed-off-by: Mark McCormick <mark.mccormick@chainguard.dev>

--- a/kyverno-1.13.yaml
+++ b/kyverno-1.13.yaml
@@ -15,7 +15,7 @@ var-transforms:
   - from: ${{package.name}}
     match: '.*-(\d+\.\d+).*'
     replace: '$1'
-    to: kyverno-version
+    to: major-minor-version
 
 environment:
   contents:
@@ -51,7 +51,7 @@ pipeline:
   - uses: strip
 
 subpackages:
-  - name: kyverno-init-container-${{vars.kyverno-version}}
+  - name: kyverno-init-container-${{vars.major-minor-version}}
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
@@ -64,7 +64,7 @@ subpackages:
         - runs: |
             kyvernopre --help
 
-  - name: kyverno-reports-controller-${{vars.kyverno-version}}
+  - name: kyverno-reports-controller-${{vars.major-minor-version}}
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
@@ -77,7 +77,7 @@ subpackages:
         - runs: |
             reports-controller --help
 
-  - name: kyverno-background-controller-${{vars.kyverno-version}}
+  - name: kyverno-background-controller-${{vars.major-minor-version}}
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
@@ -90,7 +90,7 @@ subpackages:
         - runs: |
             background-controller --help
 
-  - name: kyverno-cleanup-controller-${{vars.kyverno-version}}
+  - name: kyverno-cleanup-controller-${{vars.major-minor-version}}
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
@@ -103,7 +103,7 @@ subpackages:
         - runs: |
             cleanup-controller --help
 
-  - name: kyverno-cli-${{vars.kyverno-version}}
+  - name: kyverno-cli-${{vars.major-minor-version}}
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
