--- a/s-nail.yaml
+++ b/s-nail.yaml
@@ -2,7 +2,7 @@ package:
   name: s-nail
   version: 14.9.25
   epoch: 1
-  description: "S-nail v14.9.25"
+  description: "S-nail provides a simple and friendly environment for sending and receiving mail."
   copyright:
     - license: HPND
 
