use python3 and add more runtime deps
Co-authored-by: Jamon Camisso <jamonation@users.noreply.github.com>
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/frr-10.1.yaml
+++ b/frr-10.1.yaml
@@ -9,7 +9,9 @@ package:
     provides:
       - frr=${{package.full-version}}
     runtime:
-      - python-3.11
+      - bash
+      - iproute2
+      - python3
 
 environment:
   contents:
