dynamically link to c-ares-dev libs as well
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/frr-10.1.yaml
+++ b/frr-10.1.yaml
@@ -21,6 +21,7 @@ environment:
       - bison
       - build-base
       - busybox
+      - c-ares-dev
       - elfutils-dev
       - flex
       - json-c-dev
