Ignore some errors

--- a/nss.yaml
+++ b/nss.yaml
@@ -21,6 +21,8 @@ environment:
       - samurai
       - sqlite-dev
       - zlib-dev
+  environment:
+    CFLAGS: -Wno-error=format-truncation=
 
 var-transforms:
   - from: ${{package.version}}
