Unset duplicate flags

--- a/ssdeep.yaml
+++ b/ssdeep.yaml
@@ -30,6 +30,9 @@ pipeline:
 
   - name: 'Configure SSDEEP'
     runs: |
+      unset CFLAGS
+      unset CXXFLAGS
+      unset LDFLAGS
       ./bootstrap
       ./configure
 
