--- a/openipmi.yaml
+++ b/openipmi.yaml
@@ -50,6 +50,7 @@ subpackages:
     dependencies:
       runtime:
         - openipmi
+        - ncurses-dev
     description: openipmi dev
 
   - name: openipmi-doc
