lean4: depend on openssf-compiler-options

--- a/lean4.yaml
+++ b/lean4.yaml
@@ -8,6 +8,9 @@ package:
   resources:
     cpu: 16
     memory: 16Gi
+  dependencies:
+    runtime:
+      - openssf-compiler-options # this package picks up our wrapper
 
 environment:
   contents:
