add provides for dev and debug packages
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/frr-10.1.yaml
+++ b/frr-10.1.yaml
@@ -84,6 +84,8 @@ subpackages:
   - name: ${{package.name}}-dev
     description: dev library for ${{package.name}}
     dependencies:
+      provides:
+        - frr-dev=${{package.full-version}}
       runtime:
         - frr=${{package.full-version}}
     pipeline:
@@ -93,6 +95,9 @@ subpackages:
         - uses: test/pkgconf
 
   - name: ${{package.name}}-debug
+    dependencies:
+      provides:
+        - frr-debug=${{package.full-version}}
     pipeline:
       - uses: split/debug
     description: ${{package.name}} debug
