Update the expected commit SHA and change the update configuration to use native git
The git repository located in gitlab and expected commit doesn't change on every package update PR we need to manually do it, changing this to use git to reduce that effort.

Signed-off-by: Debasish Biswas <debasishbsws.dev@gmail.com>

--- a/glib.yaml
+++ b/glib.yaml
@@ -46,7 +46,7 @@ pipeline:
     with:
       repository: https://gitlab.gnome.org/GNOME/glib.git
       tag: ${{package.version}}
-      expected-commit: bd40fbba132fb3d6e5d785ae9d2b05a9e0da8409
+      expected-commit: 45b469ea32ac1072be580a8c3db94413738c4dd3
 
   - uses: meson/configure
     with:
@@ -132,8 +132,7 @@ subpackages:
 
 update:
   enabled: true
-  release-monitor:
-    identifier: 10024
+  git: {}
 
 test:
   pipeline:
