expand tests for uv (#33085)
watched a talk where it was mentioned that uv is the reason for 10% of
pypi traffic now. :)

---------

Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/uv.yaml
+++ b/uv.yaml
@@ -40,8 +40,20 @@ update:
 
 test:
   pipeline:
-    - runs: |
+    - name: uv version and help
+      runs: |
         uv --version | grep ${{package.version}}
         uvx --version | grep ${{package.version}}
         uv --help
         uvx --help
+    - name: uv simple example
+      runs: |
+        uv init example
+        cd example
+        uv add ruff
+        uv run ruff check
+    - name: uv toolings
+      runs: |
+        uv tool install ruff
+        uv venv
+        uv python list
