move tests out of subpackage
Signed-off-by: anushkamittal20 <anushka.mittal@chainguard.dev>

--- a/cloud-provider-azure-1.31.yaml
+++ b/cloud-provider-azure-1.31.yaml
@@ -41,12 +41,6 @@ subpackages:
             -X sigs.k8s.io/cloud-provider-azure/pkg/version.buildDate=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
             -X k8s.io/client-go/pkg/version.buildDate=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
           output: ${{range.key}}
-    test:
-      pipeline:
-        - name: help message
-          runs: |
-            /usr/bin/${{range.key}} --help
-            /usr/bin/${{range.key}} --version | grep v${{package.version}}
 
   - range: cloud-provider-azure-packages
     name: cloud-provider-azure-${{range.key}}-${{vars.major-minor-version}}-compat
@@ -55,6 +49,23 @@ subpackages:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/local/bin
           ln -sf /usr/bin/${{range.key}} ${{targets.subpkgdir}}/usr/local/bin/${{range.key}}
+
+test:
+  environment:
+    contents:
+      packages:
+        - cloud-provider-azure-cloud-controller-manager-1.31
+        - cloud-provider-azure-cloud-node-manager-1.31
+  pipeline:
+    - name: verify cloud-controller-manager
+      runs: |
+        /usr/bin/cloud-controller-manager --help
+        /usr/bin/cloud-controller-manager --version | grep v${{package.version}}
+
+    - name: verify cloud-node-manager
+      runs: |
+        /usr/bin/cloud-node-manager --help
+        /usr/bin/cloud-node-manager --version | grep v${{package.version}}
 
 update:
   enabled: true
