refactor: use glvnd for building mesa package

--- a/mesa.yaml
+++ b/mesa.yaml
@@ -1,7 +1,7 @@
 package:
   name: mesa
   version: 24.2.6
-  epoch: 0
+  epoch: 1
   description: Mesa DRI OpenGL library
   copyright:
     - license: MIT AND SGI-B-2.0 AND BSL-1.0
@@ -26,6 +26,7 @@ environment:
       - gettext
       - glslang-dev
       - libdrm-dev
+      - libglvnd-dev
       - libtool
       - libva
       - libva-dev
@@ -84,6 +85,7 @@ pipeline:
         -Dvulkan-layers=$_vulkan_layers \
         -Dplatforms=x11,wayland \
         -Dllvm=enabled \
+        -Dglvnd=true \
         -Dshared-llvm=enabled \
         -Dshared-glapi=enabled \
         -Dgbm=enabled \
@@ -113,9 +115,8 @@ pipeline:
 data:
   - name: libs
     items:
-      gles: libGLES*
-      egl: libEGL
-      gl: libGL
+      egl: libEGL_mesa
+      glx: libGLX_mesa
       glapi: libglapi
       xatracker: libxatracker*
       osmesa: libOSMesa
@@ -145,12 +146,12 @@ test:
     contents:
       packages:
         - gcc
+        - libglvnd-dev
         - libx11-dev
         - libxext-dev
-        - mesa-dev
+        - mesa
         - wget
         - glibc-dev
-        - mesa-gl
   pipeline:
     - name: Compile and run glxgears
       runs: |
