--- a/cloud-provider-azure-1.31.yaml
+++ b/cloud-provider-azure-1.31.yaml
@@ -33,6 +33,7 @@ subpackages:
       - uses: go/build
         with:
           packages: ./cmd/${{range.key}}
+          deps: github.com/golang-jwt/jwt/v4@v4.5.1
           ldflags: |
             -X sigs.k8s.io/cloud-provider-azure/pkg/version.gitVersion=v${{package.version}}
             -X k8s.io/client-go/pkg/version.gitVersion=v${{package.version}}
